package com.macowins.medioDePago;

public class Efectivo extends MedioDePago{
  public Efectivo() {
  }
}
