package com.macowins.prendas;

public enum TipoDePrenda {
  SACO, PANTALON, CAMISA
}
