package com.macowins.prendas.estados;

public interface EstadoPrenda {
  double modificarPrecio(double valor);
}
